# tinyge

./: Cargo.toml  README.md
crates/codegen/: Cargo.toml
crates/codegen/src/: dt.rs  lib.rs  structs.rs
crates/codegen/src/asts/: mod.rs  primitives.rs
crates/codegen/src/asts/comptime/: mod.rs  ops.rs  renderer.rs  scope.rs
crates/codegen/src/asts/jit/: mod.rs  ops.rs  pattern.rs  rules.rs  runner.rs
crates/codegen/src/asts/jit/rules/: basic.rs  fuse.rs  mod.rs  movement.rs  simplify.rs
crates/codegen/src/asts/lowered/: mod.rs  ops.rs  renderer.rs  scope.rs
crates/codegen/tests/: derive_test.rs  jit.rs  jit_test.rs  macro_test.rs
crates/codegen/tests/jit/: basic.rs  fuse.rs  helpers.rs  movement.rs
crates/physics/: Cargo.toml
crates/physics/src/collisions/: mod.rs
crates/physics/src/collisions/algos/: lbvh.rs  mod.rs  sah.rs  test_utils.rs  traversal.rs
crates/physics/src/collisions/algos/gpu_accelerated/: mod.rs
crates/physics/src/collisions/algos/lbvh/: cpu.rs  mod.rs
crates/physics/src/collisions/algos/lbvh/gpu/: compute_rects.rs  mod.rs
crates/physics/src/collisions/algos/lbvh/gpu/custom/: mod.rs
crates/physics/src/collisions/algos/lbvh/gpu/phases/: build_tree.rs  compute_rects.rs  mod.rs  mortonize.rs
crates/physics/src/collisions/algos/lbvh/gpu/radix_sort/: count.rs  cumsum.rs  mod.rs  phase.rs  radix_count.rs  radix_scan.rs  radix_scatter.rs  rearrange.rs
crates/physics/src/collisions/algos/sah/: mod.rs
crates/physics/src/collisions/algos/shaders/: acceleration.wgsl  traversal.wgsl
crates/physics/src/collisions/algos/shaders/lbvh/: build_tree.wgsl  compute_rects.wgsl  global_bounds.wgsl  mortonize.wgsl  radix_sort.wgsl
examples/: hexagon.rs  triangle.rs
src/: shaders.rs  (+2 more)
(+63 files in other folders)
