[workspace]
members = ["crates/codegen", "crates/codegen-macros","crates/graphics", "crates/physics", "examples/pentagon"]
version = "0.1.0"

[workspace.dependencies]
bytemuck = "1.25.0"
wgpu = "29.0.3"
pollster = "0.4.0"
rayon = "1.12.0"
winit = "0.30.13"
image = "0.25.10"
rand = "0.8"
inventory = "0.3"
glam = { version = "0.33.1", features = ["bytemuck"] }