[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu ={ workspace = true}
inventory = { workspace = true }
darling = "0.23.0"
glam ={workspace = true}
tinyge-graphics = {path = "../graphics"}
bytemuck = { workspace = true }

[dev-dependencies]
codegen-macros = {path = "../codegen-macros"}
bytemuck ={workspace = true}
memory = {path = "../memory"}
pollster = {workspace = true}